--- a/app/globals.css
+++ b/app/globals.css
@@ -82,14 +82,14 @@ html {
 }
 
 [data-theme="dark"] {
-  --gradient-start: rgba(9, 9, 11, 0);
-  --gradient-end: rgba(9, 9, 11, 0.9);
+  --gradient-start: rgba(28, 28, 28, 0);
+  --gradient-end: rgba(28, 28, 28, 0.9);
 
-  --color-bg: #09090b;
+  --color-bg: #1c1c1c;
   --color-text: #fafafa;
   --color-link: #3b82f6;
   --blockquote-color: #94a3b8;
-  --code-background-color: #222222;
+  --code-background-color: #252525;
   --code-color: #e2e8f0;
   --syntax-comment: #94a3b8;
   --syntax-keyword: #60a5fa;
@@ -102,7 +102,7 @@ html {
   --syntax-symbol: #60a5fa;
   --syntax-builtin: #c084fc;
   --syntax-meta: #94a3b8;
-  --color-bg-rgb: 9, 9, 11;
+  --color-bg-rgb: 28, 28, 28;
   --color-text-rgb: 250, 250, 250;
   --github-border: rgba(250, 250, 250, 0.1);
   --github-hover-bg: #27272a;
