--- a/app/globals.css
+++ b/app/globals.css
@@ -198,6 +198,14 @@ body {
   font-size: var(--font-size-mobile);
 }
 
+.loading-content {
+  color: var(--blockquote-color);
+  position: absolute;
+  left: 50%;
+  top: 40%;
+  transform: translate(-50%);
+}
+
 .infinity-symbol {
   font-size: var(--font-size-mobile);
   transform: translateY(-1px);
