--- a/app/globals.css
+++ b/app/globals.css
@@ -403,13 +403,10 @@ th {
 .info-popup {
   width: 100%;
   max-width: 500px;
-  background: var(--color-bg);
-  border: 1px solid rgba(var(--color-text-rgb), 0.1);
   border-radius: var(--border-radius);
-  padding: 1rem 2rem 1.5rem;
+  padding: 1rem 1rem 1.5rem;
   position: relative;
   animation: slideUp 0.2s ease;
-  top: -5%;
 }
 
 .info-content {
@@ -417,7 +414,7 @@ th {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 0rem;
+  gap: 2rem;
 }
 
 .info-content-profile {
@@ -425,7 +422,7 @@ th {
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  gap: 2rem;
+  gap: 1rem;
 }
 
 .info-avatar {
@@ -436,9 +433,9 @@ th {
 }
 
 .info-text {
-  text-align: center;
+  text-align: left;
   margin: 0;
-  line-height: 1.8;
+  font-size: calc(var(--font-size-mobile)*0.9) !important;
   color: var(--color-text) !important;
 }
 
@@ -2643,9 +2640,8 @@ a[data-footnote-ref] {
   }
 
   .info-content {
-    flex-direction: row;
     align-items: center;
-    gap: 2rem;
+    gap: 3rem;
   }
 
   .info-text {
@@ -2660,6 +2656,7 @@ a[data-footnote-ref] {
   .info-text {
     text-align: left;
     line-height: 1.8;
+    font-size: calc(var(--font-size-mobile)*1) !important;
   }
 
   .buttons-container {
