--- a/app/globals.css
+++ b/app/globals.css
@@ -445,18 +445,19 @@ th {
 .about-details {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 0.5rem;
+  justify-content: center;
 }
 
 .detail-item {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-columns: 110px 1fr;
   gap: 0.25rem;
 }
 
 .detail-label {
   color: rgba(var(--color-text-rgb), 0.6);
-  font-size: var(--font-size-mobile);
+  font-size: calc(var(--font-size-mobile) * 0.9);
   font-weight: 500;
 }
 
@@ -469,6 +470,12 @@ th {
   color: var(--color-text);
   font-size: calc(var(--font-size-mobile) * 0.9);
   text-decoration: none;
+}
+
+.detail-link svg {
+  color: var(--color-link);
+  stroke-width: 2.5;
+  margin: 0px 0px -1px 4px;
 }
 
 .option-switcher {
