--- a/app/globals.css
+++ b/app/globals.css
@@ -384,6 +384,7 @@ th {
   border: 1px solid rgba(var(--color-text-rgb), 0.1);
   border-radius: 10px;
   position: relative;
+  top: -2%;
 }
 
 .about-close {
@@ -427,6 +428,8 @@ th {
 .about-container img {
   margin: 0;
   padding: 0;
+  width: auto;
+  height: 60px;
 }
 
 .about-icon {
@@ -446,7 +449,10 @@ th {
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
-  justify-content: center;
+  width: 320px;
+  position: relative;
+  left: 50%;
+  transform: translate(-50%);
 }
 
 .detail-item {
@@ -2557,7 +2563,7 @@ a[data-footnote-ref] {
 
 .domain-header h2 {
   margin-top: 2.5rem;
-  margin-bottom: 0 !important;
+  margin-bottom: 1rem;
 }
 
 /* Tree Map */
@@ -2599,7 +2605,6 @@ a[data-footnote-ref] {
 }
 
 .treemap-node {
-  cursor: pointer;
   -webkit-tap-highlight-color: transparent;
 }
 
@@ -2700,7 +2705,28 @@ a[data-footnote-ref] {
   .detail-label,
   .detail-content,
   .detail-link {
-    font-size: calc(var(--font-size-desktop) * 0.9);
+    font-size: calc(var(--font-size-desktop) * 1);
+  }
+
+  .about-details {
+    gap: 0.75rem;
+    width: 360px;
+  }
+
+  .about-icon svg {
+    width: auto;
+    height: 22px;
+  }
+
+  .about-container img {
+    margin: 0;
+    padding: 0;
+    width: auto;
+    height: 80px;
+  }
+
+  .detail-link svg {
+    stroke-width: 3;
   }
 
   .buttons-container {
