--- a/app/globals.css
+++ b/app/globals.css
@@ -1845,7 +1845,7 @@ a[data-footnote-ref] {
 .photo-meta {
   padding: 0.5rem;
   font-size: calc(var(--font-size-mobile) * 0.7);
-  color: rgba(var(--color-text-rgb), 0.5);
+  color: rgba(var(--color-text-rgb), 0.7);
 }
 
 [data-theme="light"] .photo-meta {
@@ -1867,6 +1867,10 @@ a[data-footnote-ref] {
 
 .meta-row span {
   white-space: nowrap;
+}
+
+.meta-icon {
+  color: rgba(var(--color-text-rgb), 1);
 }
 
 .skeleton-img {
